[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "lupaxa-certtool"
version = "0.1.0rc1"
description = "A Python toolkit and CLI for generating self-signed certificates, CSRs, and private keys."
readme = "README-PYPI.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "The Lupaxa Project" }
]

keywords = ["certificate", "csr", "ssl", "x509", "cryptography", "automation"]

dependencies = [
  "cryptography>=43.0.0"
]

# Classifiers (must live inside [project])
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security :: Cryptography",
  "Topic :: Utilities",
]

# CLI entry point
[project.scripts]
certtool = "lupaxa.certtool.cli:main"

# Optional dependency groups
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.12.0",
  "types-setuptools",
  "bump-my-version>=1.0.0",
  "pip-audit>=2.7.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

# ---------------------------------------------------------------------------
# Hatch build configuration
# ---------------------------------------------------------------------------

[tool.hatch.version]
path = "src/lupaxa/certtool/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "src/**",
  "README.md",
  "README-PYPI.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lupaxa"]

# ---------------------------------------------------------------------------
# Versioning configuration (bump-my-version compatible)
# ---------------------------------------------------------------------------

[tool.bumpversion]
current_version = "0.1.0rc1"
commit = false
tag = false
commit_args = "--no-verify"
tag_name = "v{new_version}"
message = "Release {new_version}"

parse = '(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?:(?P<release>rc)(?P<build>\\d+))?'
serialize = [
  "{major}.{minor}.{patch}{release}{build}",
]

# The version file inside your package
[[tool.bumpversion.files]]
filename = "src/lupaxa/certtool/version.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

# Also update pyproject version
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# Keep tool.bumpversion.current_version in sync
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[tool.bumpversion.part.release]
# the "rc" label
values = ["", "rc"]        # "" means "no pre-release" (final)
optional_value = ""

[tool.bumpversion.part.build]
# the rc number (e.g., rc1 -> rc2)
first_value = "1"
optional_value = "0"

# ---------------------------------------------------------------------------
# Ruff configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 200
target-version = "py310"

[tool.ruff.lint]
# Core Lupaxa rule set
select = [
  # --- Essential correctness + hygiene ---
  "E",    # pycodestyle: basic style errors
  "F",    # pyflakes: unused vars, undefined names
  "I",    # import sorting
  "B",    # bugbear: common footguns

  # --- Security layer ---
  "S",    # bandit-like security checks

  # --- Modernisation + cleanup ---
  "UP",   # pyupgrade: modern Python idioms
  "SIM",  # simplify complex expressions/conditions
  "C4",   # flake8-comprehensions
  "ISC",  # implicit string-concat safety

  # --- New additions (strict mode) ---
  "D",    # pydocstyle: docstring formatting/consistency
  "ANN",  # annotations: missing/incorrect typing hints
  "PT",   # pytest: best practices for tests
]

# Disable D2xx summary/spacing rules that conflict with our preferred style
ignore = [
  "D200",
  "D201",
  "D202",
  "D203",
  "D204",
  "D205",
  "D206",
  "D207",
  "D208",
  "D209",
  "D210",
  "D211",
  "D212",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",
  "S105",
  "ANN001",
  "ANN201",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy configuration
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = "-ra -q --disable-warnings"
testpaths = ["tests"]
