[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "lupaxa-certtool"
version = "0.1.0-rc2"
description = "A Python toolkit and CLI for generating self-signed certificates, CSRs, and private keys."
readme = "README-PYPI.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "The Lupaxa Project" }
]

keywords = ["certificate", "csr", "ssl", "x509", "cryptography", "automation"]

dependencies = [
  "cryptography>=43.0.0"
]

# Classifiers (must live inside [project])
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security :: Cryptography",
  "Topic :: Utilities",
]

# ------------------------------------------------------------
# URLs (PEP 621 compliant)
# These show up on PyPI as project links.
# ------------------------------------------------------------
[project.urls]
Homepage = "https://github.com/lupaxa-security-toolbox/certtool"
Documentation = "https://lupaxa-security-toolbox.github.io/certtool/"
Repository = "https://github.com/lupaxa-security-toolbox/certtool"
Issues = "https://github.com/lupaxa-security-toolbox/certtool/issues"

# CLI entry point
[project.scripts]
certtool = "lupaxa.certtool.cli:main"

# Optional dependency groups
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.12.0",
  "types-setuptools",
  "bump-my-version>=1.2.0",
  "pip-audit>=2.7.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

# ---------------------------------------------------------------------------
# Hatch build configuration
# ---------------------------------------------------------------------------

[tool.hatch.version]
path = "src/lupaxa/certtool/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "src/**",
  "README.md",
  "README-PYPI.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lupaxa"]

# ---------------------------------------------------------------------------
# bump-my-version configuration (SemVer + rc pre-releases)
# ---------------------------------------------------------------------------

[tool.bumpversion]
current_version = "0.1.0-rc2"

# SemVer with optional "-<label><number>" pre-release, e.g. 0.1.0-rc1
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label (e.g. rc)
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number (e.g. 1)
    )?                                # pre-release section is optional
"""

serialize = [
  "{major}.{minor}.{patch}-{pre_l}{pre_n}",
  "{major}.{minor}.{patch}",
]

# Default search/replace behaviour; file-specific overrides below
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false

# Git integration
allow_dirty = false
commit = true
message = "Release {new_version}"
commit_args = ""

tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Release {new_version}"

# Hooks: after committing + tagging, push commits + tags
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = [
  "git push",
  "git push --tags",
]

# Files where versions are updated
[[tool.bumpversion.files]]
filename = "src/lupaxa/certtool/version.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

# update version AND current_verison in this file
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# Pre-release label part (e.g. "rc")
[tool.bumpversion.parts.pre_l]
values = ["dev", "rc", "final"]
optional_value = "final"

# ---------------------------------------------------------------------------
# Ruff configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 200
target-version = "py310"

[tool.ruff.lint]
# Core Lupaxa rule set
select = [
  # --- Essential correctness + hygiene ---
  "E",    # pycodestyle: basic style errors
  "F",    # pyflakes: unused vars, undefined names
  "I",    # import sorting
  "B",    # bugbear: common footguns

  # --- Security layer ---
  "S",    # bandit-like security checks

  # --- Modernisation + cleanup ---
  "UP",   # pyupgrade: modern Python idioms
  "SIM",  # simplify complex expressions/conditions
  "C4",   # flake8-comprehensions
  "ISC",  # implicit string-concat safety

  # --- New additions (strict mode) ---
  "D",    # pydocstyle: docstring formatting/consistency
  "ANN",  # annotations: missing/incorrect typing hints
  "PT",   # pytest: best practices for tests
]

# Disable D2xx summary/spacing rules that conflict with our preferred style
ignore = [
  "D200", # one-line docstring violation (not needed for multi-line)
  "D201", # no blank line before docstring
  "D202", # blank line after docstring
  "D203", # 1 blank line before class docstring
  "D204", # 1 blank line after class docstring
  "D205", # 1 blank line required between summary line and description
  "D206", # various indentation rules
  "D207",
  "D208",
  "D209",
  "D210",
  "D211",
  "D212", # "Summary should start at first line" (we prefer second line)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",   # allow bare assert in tests
  "S105",   # allow test-only "password"-like literals
  "ANN001", # allow untyped fixture arguments
  "ANN201", # allow untyped test function returns
]

[tool.ruff.lint.pydocstyle]
# NumPy-style docstrings, closest to our format
convention = "numpy"

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy configuration
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = "-ra -q --disable-warnings"
testpaths = ["tests"]
